# keywey

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst
docs/userguide/: development.rst  language_support.rst
src/: ffi.rs  lang_elements.rs  lib.rs
src/keywey/: language.py
tests/: test_ffi.py  test_language.py
